REGRESSION(276827@main): Some animated images that used to work no longer work https://bugs.webkit.org/show_bug.cgi?id=273457 rdar://127133070

Reviewed by Simon Fraser.

Like before 276827@main, make frameAtIndexCacheIfNeeded() take an optional
SubsamplingLevel. This pramater should not affect the cached NativeImage if it
is std::nullopt.

* LayoutTests/fast/images/animated-gif-sub-sample-expected.html: Added.
* LayoutTests/fast/images/animated-gif-sub-sample.html: Added.
* LayoutTests/fast/images/resources/3720-2584-animated-black.gif: Added.
* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/platform/graphics/BitmapImageSource.cpp:
(WebCore::BitmapImageSource::frameAtIndexCacheIfNeeded):
* Source/WebCore/platform/graphics/BitmapImageSource.h:

Canonical link: https://commits.webkit.org/278195@main